Backend US10 11 and 12 + separated logging for each service